web/src/index.css
:root {
  --primary: #b5b5b5;
  --primary-dark: #505050;
  --primary-light: #f5f5f5;
  --primary-darker: #0a0a0a;
  --border-color: #808080;
  --border-width: 0.1rem;
  --border-radius: 0.25rem;
  --size-1: 0.1rem;
  --size-2: 0.3rem;
  --size-3: 0.5rem;
  --size-4: 1rem;
  --size-5: 1.5rem;
}

*,
::after,
::before {
  box-sizing: inherit;
  padding: 0;
  margin: 0;
}

html {
  overflow: scroll;
  box-sizing: border-box;
  background-color: var(--primary-darker);
  color: var(--primary);
  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica,
    Arial, sans-serif;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
}

.container {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  position: relative;
  width: auto;
  max-width: 1280px;
  padding: var(--size-2);
}

